# bake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh
src/: main.cpp
src/client/: Client.cpp  Client.hpp
src/core/: Core.cpp  Core.hpp  ec.cpp  ec.hpp
src/fuzzyVault/: Thimble.cpp  Thimble.hpp
src/server/: AuthenticationServer.cpp  AuthenticationServer.hpp  ComputationServer.cpp  ComputationServer.hpp
src/thimbleExt/: FJFXFingerprint.cpp
test/: app.cpp  bake.cpp  blinding.cpp  client.cpp  communication.cpp  computeTiming.py  fuzzyVault.cpp  fuzzyvault.cpp  generateMctyDatabase.py  hash.cpp  test.cpp  time.cpp
